# ultralists

./: .gitignore  Dockerfile  README.md  pyproject.toml
infra/: deploy-playbook.yaml
src/: manage.py
src/functional_tests/: base.py  test_item_validation.py  test_layout_and_styling.py  test_list_creation.py  tests.py
src/lists/: forms.py  models.py  tests.py  urls.py  views.py
src/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_alter_item_unique_together.py  0006_alter_item_options.py
src/lists/templates/: base.html  home.html  list.html
src/lists/templates/lists/: base.html  home.html  list.html
src/lists/tests/: test_forms.py  test_models.py  test_views.py  tests.py
src/superlists/: settings.py  urls.py
src/ultralists/: asgi.py  settings.py  urls.py  wsgi.py
