[project]
name = "goat-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "gunicorn>=25.3.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ansible>=13.6.0",
    "cssselect>=1.4.0",
    "docker>=7.1.0",
    "lxml>=6.1.0",
    "selenium>=4.43.0",
]
